--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "lottie-react": "^2.4.0",
     "pipwerks-scorm-api-wrapper": "^0.1.2",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
+    "react-player": "^2.16.0",
     "react-scripts": "5.0.1"
   },
   "homepage": "./",
